# aurora

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  extra.css  index.html  mkdocs.yml  premake5.lua  search.html  sitemap.xml
aurora/: .clang-format  au_aurora.cpp  au_entrypoint.cpp  au_hash.hpp  au_hooks.hpp  au_lua_serialize.cpp  au_lua_serialize.hpp  au_serial.cpp  au_serial.hpp  au_serialize.hpp  au_steam_api.h  au_steam_api_hooks.cpp  au_thumper_structs.hpp  au_util.cpp  au_util.hpp  au_window.cpp  au_window.hpp  aurora.cpp  binstream.cpp  build.lua  entrypoint.cpp  icon.hpp  lua_api.cpp  lua_api.hpp  post_build.bat  post_build.ps1
aurora/api/: au_api.hpp  au_api_filesystem.cpp  au_api_gl.cpp  au_api_glm.cpp  au_api_imgui.cpp  au_api_native.cpp
aurora/dev_setup_guide/: index.html
aurora/gui/: au_hasher.cpp  au_hasher.hpp
aurora/source/: te_annotate.hpp  te_entry.cpp  te_hash.cpp  te_hash.hpp  te_stream.hpp  te_structs.cpp  te_structs.hpp
aurora/user_install_guide/: index.html
aurora/user_level_reload/: index.html
cpp/: .gitignore  Aurora.sln  Aurora.vcxproj  aurora.cpp
docs/: index.md  user_install_guide.md
docs/aurora/: dev_setup_guide.md  user_level_reload.md
docs/modding/: install_overview.md  install_windows.md  (+2 more)
java/: .classpath  .gitignore
premake/: glad.lua  glfw.lua  imgui.lua  lua.lua  tinyfd.lua  zlib.lua
search/: search_index.json
thumper/: index.html
user_install_guide/: index.html
working/: .gitignore  boot.lua  credits.lua  hashtable.lua  hashtable.yaml  localization.lua  startup.lua  textures.lua
(+258 files in other folders)
